cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09088_my-project.cf.yaml
---
AWSTemplateFormatVersion: 2010-09-09

Description: My awesome project

Parameters:
  TemplatesS3Bucket:
    Type: String
    Description: S3 Bucket with the components templates
  InstallationName:
    Type: String
    Description: Unique DNS stack installation name
  RuntimeEnvironment:
    Type: String
    Description: The runtime environment config tag
    Default: dev
  Route53ZoneDomain:
    Type: String
    Description: Route53 zone domain that represents the environment
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC to deploy the Wageplayer Stack into
  PrivateSubnets:
    Description: Private subnets for the DNS Cache servers
    Type: List<AWS::EC2::Subnet::Id>
  KeyPair:
    Type: String
    Description: SSH keypair
    Default: ''
  ServerAmi:
    Description: DNS server AMI
    Type: AWS::EC2::Image::Id
    Default: ami-9d58b6ff
  ServerInstanceType:
    Type: String
    Description: The EC2 instance type for the cache instances
    AllowedValues:
      - t2.small
      - t2.medium
      - t2.large
      - m3.medium
      - m4.large
      - c4.large
    Default: t2.small

Conditions:
  HasNoSSHKey: !Equals [!Ref KeyPair, '']

Resources:
  MyProjectSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Permit HTTP/HTTPS from anywhere
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  LaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !Ref ServerAmi
      InstanceType: !Ref ServerInstanceType
      KeyName:
        Fn::If:
          - HasNoSSHKey
          - !Ref AWS::NoValue
          - !Ref KeyPair
      SecurityGroups:
        - !Ref MyProjectSG

  AutoscalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier: !Ref PrivateSubnets
      LaunchConfigurationName: !Ref LaunchConfiguration
      MinSize: 1
      MaxSize: 3
      DesiredCapacity: 1
      Tags:
        - Key: Name
          Value: MY-PROJECT-SERVER
          PropagateAtLaunch: True
